# mesh_part_prep

./: README.rst  setup.cfg
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  mesh_part_prep.rst  modules.rst
mesh_part_prep/: __init__.py  cli.py  mesh_part_prep.py  plugin.py
