[metadata]
name = mesh_part_prep
description = A CLI and esm-tools plugin to prepare the mesh partitioner 
description-file = README.rst
author = Paul Gierz
author-email = paul.gierz@awi.de
license = GPLv3

[entry_points]
console_scripts =
        mesh_part_prep = mesh_part_prep.cli:main
esm_tools.plugins = 
        mesh_part_prep = mesh_part_prep.plugin:esm_mesh_part_prep
        mesh_part_finish = mesh_part_prep.plugin:esm_mesh_part_finish
